[package]
name = "lx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
libc = "0.2.139"
term_cursor = "0.2.1"
termion = "1.5"
tui = { version = "0.19", default-features = false, features = ['termion'] }
